[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Themes_v2/CHAR_CREATION/ChC_Middle_Panel.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/Themes_v2/CHAR_CREATION/Button_Colored_Hover.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/Themes_v2/CHAR_CREATION/Button_Colored_Pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/Themes_v2/CHAR_CREATION/Button_Colored_Normal.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/Themes_v2/EmptyTexture.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PT_30.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=8]
[ext_resource path="res://gui_modules/CharacterCreation_old/RaceSelectionModule.gd" type="Script" id=9]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/Buttons/buttonframe_pressed.png" type="Texture" id=10]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/Buttons/buttonframe.png" type="Texture" id=11]
[ext_resource path="res://assets/images/raceshades/Human_M.png" type="Texture" id=12]
[ext_resource path="res://assets/Textures_v2/CHAR_CREATION/Buttons/buttonframe_hover.png" type="Texture" id=13]

[node name="RaceSelectionModule" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1140.0
margin_bottom = -250.0
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
self_modulate = Color( 0.180392, 0.054902, 0.713726, 1 )
show_behind_parent = true
margin_right = 780.0
margin_bottom = 830.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RaceSelection" type="Panel" parent="."]
margin_right = 780.0
margin_bottom = 830.0
custom_styles/panel = ExtResource( 5 )

[node name="ScrollContainer" type="ScrollContainer" parent="RaceSelection"]
margin_left = 23.0
margin_top = 27.0
margin_right = 323.0
margin_bottom = 804.0
theme = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="RaceSelection/ScrollContainer"]
margin_right = 300.0
size_flags_horizontal = 3

[node name="Button" type="TextureButton" parent="RaceSelection/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 300.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 13 )

[node name="icon" type="TextureRect" parent="RaceSelection/ScrollContainer/VBoxContainer/Button"]
margin_left = 7.7275
margin_top = 7.82487
margin_right = 47.7275
margin_bottom = 47.8249
expand = true

[node name="name" type="Label" parent="RaceSelection/ScrollContainer/VBoxContainer/Button"]
margin_left = 58.0
margin_top = 7.0
margin_right = 273.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 6 )
valign = 1

[node name="TextureRect" type="TextureRect" parent="RaceSelection"]
self_modulate = Color( 1, 1, 1, 0.407843 )
margin_left = 338.0
margin_top = 6.0
margin_right = 772.0
margin_bottom = 740.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="RaceSelection"]
margin_left = 353.0
margin_top = 27.0
margin_right = 753.0
margin_bottom = 721.0
custom_colors/default_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmButton" type="Button" parent="."]
margin_left = 558.137
margin_top = 750.0
margin_right = 753.137
margin_bottom = 818.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="."]
margin_left = 344.0
margin_top = 750.0
margin_right = 539.0
margin_bottom = 818.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}
